tests/modules/fail/0001-module-missing-var.ec
type t.

module type I = {
  var x : t
}.

module M : I {
  var y : t
}.
